updated objective ul alignment

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </header>
 <div class="cont objective">
   <h3>OBJECTIVE</h3>
-  <ul>
+  <ul class='obj'>
     <li>To work in a progressive and challenging environment which allows me to grow professionally, enhancing my career growth and where my potential is utilized to the best.</li>
   </ul>
 
